Uniform handling of absence of loading of record in database.
Prevention of automatic loading of records in case of linked list.
Fixes in session#exist method.